--- a/report.tex
+++ b/report.tex
@@ -76,10 +76,32 @@ The colors were fixed to match in both scenes through trial and error mostly.
 
 \section{Lab 2: Photoshop Techniques}
 
+\subsection{Image restoration} % baby, scratched, pink flowers
+
+\subsection{Retouching} % phat
+
+\subsection{Creating a seamless tile} % wood
+
+\subsection{Montage and design} % poster
+
+\subsection{Webpage} % adding structure to cube in three.js
+
 \section{Lab 3: 3D Modelling and animation}
+
+\subsection{A ball bouncing on a table} % Maya
+
+\subsection{Adding lights} % to webpage
 
 \section{Lab 4: Introduction to Data Mining}
 
+%something something, questionnaire?
+
 \section{Lab 5: Introduction to 3D visualization}
+
+\subsection{Visualizing a three-dimensional vector field}
+
+\subsection{Analyzing the air quality of a kitchen}
+
+\subsection{Volume rendering}
 
 \end{document}
