writing about lab 2

--- a/report.tex
+++ b/report.tex
@@ -75,16 +75,24 @@ not rotate around the y-axis.
 The colors were fixed to match in both scenes through trial and error mostly.
 
 \section{Lab 2: Photoshop Techniques}
+Using mostly Photoshop and some GIMP we restored and altered a number of pictures.
 
-\subsection{Image restoration} % baby, scratched, pink flowers
+\subsection{Image restoration} % baby, scratched, pink flowers, marsvin
+The image restoration involved a faded baby, a scratched photo of a mother and a baby, a photo of pink flowers, and a photo of a guinea pig. For the baby we added an adjustment layer to correct the faded colors. We also did some sharpening, altering the contrasts, and added a circular gradient with high opacity to even out the edges of the photo. 
+
+To restore the scratched photo it was sufficient to use the \textbf{clone stamp}. We removed the damage on the right hand side and removed all of the highly visible dirt and scratches. The pink flowers changed color to blue using the \textbf{replace color} adjustment tool. The guinea pig photo was done in a similar way as the first photo. We altered the color balance to our liking and by that made sure the kid is interpreted as the subject of the image. While altering the colors we made sure that the photo was not perceived as flat as in the original photo. This made the subject of the photo much clearer, being in center and all.
 
 \subsection{Retouching} % phat
+Using the \textbf{elliptical marquee} in conjunction with the \textbf{liquify} filter to narrow the figure of the model in \textit{Phat.png}. We mostly work on his stomach, but made som over-all narrowing of his figure, neck and chin. At some places the distortion became too large, but this was easily fixed with the \textbf{reconstruction tool}.
 
 \subsection{Creating a seamless tile} % wood
+Working on \textit{Wood.png} involved both Photoshop and GIMP. In Photoshop we cropped the image to a suitable square form, resized it and did some retouching to i.e. remove the coffee stain. After reading the \textit{Seamless tile tutorials} from the course web page we found that GIMP had the most convenient approach to making something seamless, and therefore we exported the pre-worked tile there and used the \textbf{Filters>Map>Make Seamless} command to finish our seamless tile.
 
 \subsection{Montage and design} % poster
+We made a poster for a post-apocalyptic event (inspired by Fallout and Borderlands). We started out with three images of a destroyed city, pip-boy and uncle Sam respectively. Working with texts, layers and filters we aimed for the design of an old and somewhat worn poster. The pip-boy image to the far right is intended to be interpreted as a sticker applied to the poster. 
 
 \subsection{Webpage} % adding structure to cube in three.js
+Using the seamless wooden tile constructed earlier we added texture to the rotating cube in a copy of the Three.js parts of our first lab. To apply the texture to the cube we changed the materials to mapping a texture. Since we wanted the same texture on all six surfaces of the cube, we no longer needed six different materials. We then added repeating of the texture and set the repeat to two times in both axes. See source code for implementation details.
 
 \section{Lab 3: 3D Modelling and animation}
 
@@ -96,7 +104,7 @@ The colors were fixed to match in both scenes through trial and error mostly.
 
 %something something, questionnaire?
 
-\section{Lab 5: Introduction to 3D visualization}
+\section{Lab 5: InDoctroduction to 3D visualization}
 
 \subsection{Visualizing a three-dimensional vector field}
 
