writing about lab 4 and changing some of the answers

--- a/report.tex
+++ b/report.tex
@@ -101,8 +101,30 @@ Using the seamless wooden tile constructed earlier we added texture to the rotat
 \subsection{Adding lights} % to webpage
 
 \section{Lab 4: Introduction to Data Mining}
+The answers to the questions are available in the attached questionnaire. The tables was charts were constructed following the lab assignment. Additional charts or columns were created to answer certain questions in the questionnaire. Below is how we reasoned about the questions.
 
-%something something, questionnaire?
+Marking the S and M party one at a time in the straight table \textbf{Party} and sorting the \textbf{Party Votes} on the column \textbf{Perc 2006} we could answer the first four questions of the questionnaire, by selecting the top and bottom Municipality.
+
+Strongest municipality support overall in 2006 was selected from the bar chart \textbf{Party votes}, with selections cleared. 
+
+Iterating over all the parties we noted the highest overall municipality support was in Kalix (59.9\% for S).
+
+Question 7, to achieve this we sorted on the column \textbf{Change} in \textbf{Party Votes} with the party S investigated, marking the positive values and noted the number in the text object. 
+Question 8 was achieved in a similar maner as question 7, only to find no decreased support for M.
+
+Question 9, we sorted on column \textbf{Participation} in \textbf{Vote overview 2006} and selected the highest value. Selecting that municipality (Lomma) the answer to question 10 could be found in the bar chart \textbf{Party votes}.
+
+Question 11 and 12, we simply sorted on column \textbf{Registered voters} in \textbf{Vote overview 2006} and selected the top and bottom values.
+
+To answer question 13 we added a new column \textbf{Perc blank} in \textbf{Vote overview 2006} with the definition \textit{Sum(BlankVotes) / Sum(Voters)}. We then sorted on this column and noted the highest percentage. Selecting that municipality (Karlsborg) the answer to question 14 could be found in the bar chart \textbf{Party votes}.
+
+For question 15, a new straight table \textbf{Provinces} was created including provinces. With the S party selected we sorted on column \textbf{Perc 2006} to find the highest support. Sorting on column \textbf{Perc 2002} we found another province at the top, which answered the next question.
+
+We answered the next two questions in the same manner, but with the M party selected instead.
+
+To answer question 19 se selected \"Ovr and sorted on the highest percentage both 2002 and 2006 and compared the top provinces. For the southern provinces we mainly included Sk\aa ne, Blekinge and Halland. They were in the absolute top in 2006, but in 2002 it wasn't as clear. 
+
+Question 20, we played around with the municipalities where the support was highest for each party and noted the participation percentage. The differences were not high enough to make a definite statement about the trends noted.
 
 \section{Lab 5: InDoctroduction to 3D visualization}
 
