--- a/report.tex
+++ b/report.tex
@@ -97,6 +97,15 @@ Using the seamless wooden tile constructed earlier we added texture to the rotat
 \section{Lab 3: 3D Modelling and animation}
 
 \subsection{A ball bouncing on a table} % Maya
+Using Maya we modeled a ball bouncing on a table. The most advanced shape involved was the table  which consists of several altered \textbf{cube primitives}. The table top is a simple rectangular cube primitive with its top face extruded (after texturing) and slightly altered to create a beveled shape. The legs are copies of one modeled shape, which also was a cube primitive but with more than one (five to be exact) division along its height. Using these divisions, some simple scaling of the existing levels of four vertices each created a sort of angled lathed table leg. Using \textbf{planar mapping} on surfaces and \textbf{Phong} materials, we could texture the table with our seamless tile from the second lab. On the legs we used \textbf{cylindrical mapping}.
+
+The ball itself is a straight on \textbf{sphere primitive} colored pink with \textbf{Phong} material. In contrast to the table's \textit{face} normals the ball has \textit{average} normals so that it will not be flat shaded. 
+
+\subsubsection{Animation}
+After modelling the shapes, the next step was to animate the ball bouncing on the table. Using 60 frames the ball was to appear above the table, bounce on it twice and then drop off. The bounces was set to be att approximately frame 20 and 40, i.e., a third and two thirds into the animation. % write more stuffs here
+
+\subsubsection{Lighting and rendering}
+% write stuffs here
 
 \subsection{Adding lights} % to webpage
 
