--- a/report.tex
+++ b/report.tex
@@ -9,6 +9,7 @@
 \usepackage{pdfpages}
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{hyperref}
 
 \title{DH2320 Lab work}
 \author{Karl Johan Andreasson <{kalleand@kth.se}> %
@@ -28,7 +29,14 @@
 \pagestyle{fancy}
 \setcounter{page}{1}
 
+\section*{Lab work}
+These are the descriptions summarising our work in lab 1 through 5 of course DH2320, Introduction to Visualization and Computer Graphics. Graphical results of lab 1 through 3 can be found at \url{http://www.csc.kth.se/~kalleand/}.
+
 \section{Lab 1: WebGL and Three.js}
+
+\subsection*{URL}
+\url{http://www.csc.kth.se/~kalleand/lab1/index.html}
+
 \subsection{Make the first cube look like the second one.}
 
 For the first assignment we were supposed to alter how a Javascript using WebGL rendered a
@@ -75,6 +83,9 @@ The colors were fixed to match in both scenes through trial and error mostly.
 \newpage
 \section{Lab 2: Photoshop Techniques}
 Using mostly Photoshop and some GIMP we restored and altered a number of pictures.
+
+\subsection*{URL}
+\url{http://www.csc.kth.se/~kalleand/lab2/index.html}
 
 \subsection{Image restoration} % baby, scratched, pink flowers, marsvin
 The image restoration involved a faded baby, a scratched photo of a mother and a
@@ -125,6 +136,9 @@ different materials. We then added repeating of the texture and set the repeat
 to two times in both axes. See source code for implementation details.
 
 \section{Lab 3: 3D Modelling and animation}
+
+\subsection*{URL}
+\url{http://www.csc.kth.se/~kalleand/lab3/index.html}
 
 \subsection{A ball bouncing on a table} % Maya
 Using Maya we modeled a ball bouncing on a table. The most advanced shape
